iele/original/standalone/iele-testing-kompiled/koreparser/y.output

state 0
	$accept: .top $end 

	DOTK  shift 9
	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	k  goto 2
	kitem  goto 3
	ksequence  goto 4
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  k.    (1)

	.  reduce 1 (src line 32)


state 3
	ksequence:  kitem.KSEQ kitem 
	k:  kitem.    (5)

	KSEQ  shift 10
	.  reduce 5 (src line 52)


state 4
	ksequence:  ksequence.KSEQ kitem 
	k:  ksequence.    (6)

	KSEQ  shift 11
	.  reduce 6 (src line 57)


state 5
	kitem:  KLABEL.'(' klist ')' 

	'('  shift 12
	.  error


state 6
	kitem:  KLABELLABEL.'(' KLABEL ')' 

	'('  shift 13
	.  error


state 7
	kitem:  TOKENLABEL.'(' STRING ',' STRING ')' 

	'('  shift 14
	.  error


state 8
	kitem:  KVARIABLE.    (10)

	.  reduce 10 (src line 75)


state 9
	ksequence:  DOTK.    (4)

	.  reduce 4 (src line 47)


state 10
	ksequence:  kitem KSEQ.kitem 

	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	kitem  goto 15

state 11
	ksequence:  ksequence KSEQ.kitem 

	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	kitem  goto 16

state 12
	kitem:  KLABEL '('.klist ')' 

	DOTK  shift 9
	DOTKLIST  shift 19
	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	k  goto 18
	kitem  goto 3
	klist  goto 17
	ksequence  goto 4

state 13
	kitem:  KLABELLABEL '('.KLABEL ')' 

	KLABEL  shift 20
	.  error


state 14
	kitem:  TOKENLABEL '('.STRING ',' STRING ')' 

	STRING  shift 21
	.  error


state 15
	ksequence:  kitem KSEQ kitem.    (2)

	.  reduce 2 (src line 38)


state 16
	ksequence:  ksequence KSEQ kitem.    (3)

	.  reduce 3 (src line 43)


state 17
	kitem:  KLABEL '(' klist.')' 
	klist:  klist.',' k 
	klist:  klist.',' ',' k 

	')'  shift 22
	','  shift 23
	.  error


state 18
	klist:  k.    (11)

	.  reduce 11 (src line 80)


state 19
	klist:  DOTKLIST.    (14)

	.  reduce 14 (src line 93)


state 20
	kitem:  KLABELLABEL '(' KLABEL.')' 

	')'  shift 24
	.  error


state 21
	kitem:  TOKENLABEL '(' STRING.',' STRING ')' 

	','  shift 25
	.  error


state 22
	kitem:  KLABEL '(' klist ')'.    (7)

	.  reduce 7 (src line 62)


state 23
	klist:  klist ','.k 
	klist:  klist ','.',' k 

	DOTK  shift 9
	','  shift 27
	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	k  goto 26
	kitem  goto 3
	ksequence  goto 4

state 24
	kitem:  KLABELLABEL '(' KLABEL ')'.    (8)

	.  reduce 8 (src line 67)


state 25
	kitem:  TOKENLABEL '(' STRING ','.STRING ')' 

	STRING  shift 28
	.  error


state 26
	klist:  klist ',' k.    (12)

	.  reduce 12 (src line 85)


state 27
	klist:  klist ',' ','.k 

	DOTK  shift 9
	TOKENLABEL  shift 7
	KLABELLABEL  shift 6
	KVARIABLE  shift 8
	KLABEL  shift 5
	.  error

	k  goto 29
	kitem  goto 3
	ksequence  goto 4

state 28
	kitem:  TOKENLABEL '(' STRING ',' STRING.')' 

	')'  shift 30
	.  error


state 29
	klist:  klist ',' ',' k.    (13)

	.  reduce 13 (src line 89)


state 30
	kitem:  TOKENLABEL '(' STRING ',' STRING ')'.    (9)

	.  reduce 9 (src line 71)


14 terminals, 6 nonterminals
15 grammar rules, 31/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 17/120000
22 extra closures
43 shift entries, 1 exceptions
10 goto entries
6 entries saved by goto default
Optimizer space used: output 44/120000
44 table entries, 0 zero
maximum spread: 14, maximum offset: 27
